Adding hello world to index file

--- a/001_html-document/index.html
+++ b/001_html-document/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello World</title>
+    <style>
+        P {
+            color: blue;
+        }
+    </style>
+
 </head>
 <body>
+
+<p>Hello World</p>
 
 </body>
 </html>
