--- a/002_html_excercises/index.html
+++ b/002_html_excercises/index.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
-<header></header>
-
-<section>
-    <article></article>
-</section>
-
-<aside></aside>
-
-<footer></footer>
 
 </body>
 </html>
